# holochain-playground

./: .eslintrc  .gitignore  .prettierrc  LICENSE  README.md  default.nix  eslint.config.js  flake.nix  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: build-nix-app.yaml
.storybook/: manager.js  preview-head.html  preview.js
fixture/: Cargo.toml  package-lock.json
fixture/dnas/forum/workdir/: dna.yaml
fixture/dnas/forum/zomes/coordinator/posts/: Cargo.toml
fixture/dnas/forum/zomes/coordinator/posts/src/: all_posts.rs
fixture/dnas/forum/zomes/integrity/posts/: Cargo.toml
fixture/tests/: package.json
fixture/tests/src/forum/posts/: comment.test.ts  post.test.ts
fixture/ui/: index.html  package.json  vite.config.ts
fixture/ui/src/: contexts.ts  holochain-app.ts
fixture/ui/src/forum/posts/: create-post.ts  post-detail.ts
fixture/workdir/: happ.yaml  web-happ.yaml
nix/: sources.json
tests/happ/: Cargo.toml  README.md  flake.nix  package-lock.json  package.json
tests/happ/dnas/forum/workdir/: dna.yaml
tests/happ/dnas/forum/zomes/coordinator/posts/src/: all_posts.rs  comment.rs  lib.rs  post.rs
tests/happ/dnas/forum/zomes/integrity/posts/src/: comment.rs  lib.rs  post.rs
tests/happ/tests/: package.json  vitest.config.ts
tests/happ/tests/src/forum/posts/: all-posts.test.ts  comment.test.ts  common.ts  post.test.ts
tests/happ/ui/: package.json
tests/happ/ui/src/: holochain-app.ts
tests/happ/ui/src/forum/posts/: all-posts.ts  comment-detail.ts  comments-for-post.ts  create-comment.ts  create-post.ts  edit-post.ts  post-detail.ts  types.ts
tests/happ/workdir/: dna.yaml  happ.yaml
tests/happ/zomes/create_entry/: Cargo.toml
tests/happ/zomes/create_entry/src/: lib.rs
(+2 files in other folders)
