[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2021"
license = "MIT"
name = "test_playground_create_entry"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "test_playground_create_entry"

[dependencies]
derive_more = "0"
serde = "1"

test_wasm_create_entry = {git = "https://github.com/holochain/holochain", package = "test_wasm_create_entry", rev = "holochain-0.0.148"}
